--- a/src/css/apps/components/shell/actioncenter.css
+++ b/src/css/apps/components/shell/actioncenter.css
@@ -60,5 +60,5 @@ div.shell div.actioncenter div.top > div {
   height: 110px;
   box-shadow: 0 2px 5px 2px #0002;
   outline: var(--button-glass-hover-bg) 1px solid;
-  outline-offset: -1;
+  outline-offset: -1px;
 }
