--- a/src/css/apps/components/shell/actioncenter/clock.css
+++ b/src/css/apps/components/shell/actioncenter/clock.css
@@ -5,7 +5,7 @@ div.shell div.actioncenter div.top div.clock {
   align-items: start;
   flex-direction: column;
   justify-content: center;
-  background-color: var(--button-glass-bg);
+  background-color: var(--shell-component-bg);
 }
 
 div.shell div.actioncenter div.top div.clock h1 {
