--- a/src/css/apps/components/shell/colored.css
+++ b/src/css/apps/components/shell/colored.css
@@ -19,6 +19,10 @@
   transition: none !important;
 }
 
+.theme-light .shell-colored::before {
+  opacity: 0.3;
+}
+
 .shell-colored.colored::before {
   background-color: var(--accent);
 }
