--- a/src/css/apps/components/shell/actioncenter.css
+++ b/src/css/apps/components/shell/actioncenter.css
@@ -58,7 +58,7 @@ div.shell div.actioncenter div.top {
 div.shell div.actioncenter div.top > div {
   border-radius: 10px;
   height: 110px;
-  box-shadow: 0 2px 5px 2px #0002;
+  box-shadow: var(--secondary-box-shadow);
   outline: var(--button-glass-bg) 1px solid;
   outline-offset: -1px;
 }
