--- a/src/css/apps/components/shell/actioncenter/quicksettings.css
+++ b/src/css/apps/components/shell/actioncenter/quicksettings.css
@@ -3,7 +3,7 @@ div.shell div.actioncenter div.quick-settings {
   min-height: 60px;
   background-color: var(--shell-component-bg);
   border-radius: 10px;
-  box-shadow: 0 2px 5px 2px #0002;
+  box-shadow: var(--secondary-box-shadow);
   display: flex;
   justify-content: space-between;
   align-items: center;
