--- a/src/css/apps/components/shell/taskbar/openedapps.css
+++ b/src/css/apps/components/shell/taskbar/openedapps.css
@@ -111,3 +111,13 @@ div.shell div.taskbar div.opened-apps button.active img.backdrop {
   opacity: 0.5;
   filter: brightness(1.3) blur(7px);
 }
+
+.theme-light #arcShell div.shell div.taskbar div.opened-apps button.active,
+.theme-light #arcShell div.shell div.taskbar button.start-button.active {
+  background-color: var(--button-glass-bg);
+}
+
+.theme-light #arcShell div.shell div.taskbar div.opened-apps button:not(.active),
+.theme-light #arcShell div.shell div.taskbar button.start-button:not(.active) {
+  opacity: 0.7;
+}
