--- a/src/css/apps/user/settings/page/visuals.css
+++ b/src/css/apps/user/settings/page/visuals.css
@@ -18,6 +18,6 @@
   padding: 0;
   margin: 0;
   border: 0;
-  background-color: var(--button-bg);
+  background-color: transparent;
   border-radius: 0;
 }
