--- a/src/css/apps/components/shell/taskbar.css
+++ b/src/css/apps/components/shell/taskbar.css
@@ -1,4 +1,5 @@
 @import url("./taskbar/openedapps.css");
+@import url("./taskbar/position.css");
 div.shell div.taskbar {
   display: flex;
   align-items: center;
