--- a/src/css/apps/user/processmanager.css
+++ b/src/css/apps/user/processmanager.css
@@ -141,7 +141,7 @@
   gap: 5px;
 }
 
-#processManager > div.body div.row div.segment.name img {
+#processManager > div.body div.row div.segment img {
   height: 16px;
 }
 
