--- a/src/css/apps/components/shell/workspaceindicator.css
+++ b/src/css/apps/components/shell/workspaceindicator.css
@@ -1,7 +1,7 @@
 #arcShell div.workspace-indicator {
-  position: fixed;
+  position: absolute;
   bottom: 200px;
-  left: calc(50vw - 64px);
+  left: calc(50% - 64px);
   width: 100px;
   height: 100px;
   border-radius: 15px;
