--- a/src/css/apps/components/shell/workspaces.css
+++ b/src/css/apps/components/shell/workspaces.css
@@ -1,8 +1,8 @@
 #arcShell div.virtual-desktops {
   width: calc(100% - 20px);
   height: 100px;
-  position: fixed;
-  bottom: 70px;
+  position: absolute;
+  bottom: 10px;
   left: 10px;
   background-color: var(--glass-bg);
   border-radius: 15px;
@@ -26,7 +26,7 @@
 }
 
 #arcShell div.virtual-desktops.docked {
-  bottom: 50px;
+  bottom: 0;
   left: 0;
   width: 100%;
   border-radius: 0;
