--- a/src/css/apps/components/updatenotifier.css
+++ b/src/css/apps/components/updatenotifier.css
@@ -9,7 +9,7 @@
   filter: blur(100px);
   width: 100%;
   aspect-ratio: 1/1;
-  position: fixed;
+  position: absolute;
   top: -50%;
   left: 0;
   z-index: -1;
