--- a/src/css/window.css
+++ b/src/css/window.css
@@ -37,7 +37,6 @@ div.window:not(.core).shell-colored.colored::before {
 }
 
 div.window:not(.core).maximized {
-  /* position: fixed !important; */
   top: 0 !important;
   left: 0 !important;
   width: 100% !important;
@@ -61,9 +60,9 @@ div.window:not(.core).maximized.no-shell {
 div.window:not(.core).fullscreen {
   top: 0 !important;
   left: 0 !important;
-  width: 100vw !important;
-  min-width: 100vw !important;
-  max-width: 100vw !important;
+  width: 100% !important;
+  min-width: 100% !important;
+  max-width: 100% !important;
   height: 100vh !important;
   min-height: 100vh !important;
   max-height: 100vh !important;
@@ -185,7 +184,7 @@ div.window.minimized.no-shell {
   min-height: 40px !important;
   max-height: 40px !important;
   opacity: 0.5 !important;
-  position: fixed !important;
+  position: absolute !important;
   bottom: 5px !important;
   right: 5px !important;
   top: unset !important;
