--- a/src/css/apps/components/globalloadindicator.css
+++ b/src/css/apps/components/globalloadindicator.css
@@ -1,12 +1,44 @@
+#GlobalLoadIndicator.extended {
+  height: calc(60px + 50px + 2px) !important;
+}
+
 #GlobalLoadIndicator > div.body {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  min-height: 80px;
-  padding: 20px;
-  gap: 15px;
+  padding: 0;
 }
 
 #GlobalLoadIndicator > div.body svg {
   min-width: 32px;
+}
+
+#GlobalLoadIndicator > div.body div.top {
+  height: 60px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  min-height: 60px;
+  padding: 20px;
+  padding-bottom: 0;
+  gap: 15px;
+}
+
+#GlobalLoadIndicator > div.body div.bottom {
+  height: 50px;
+  padding: 20px;
+}
+
+#GlobalLoadIndicator > div.body div.progress-bar {
+  width: 100%;
+  height: 10px;
+  border-radius: 5px;
+  background-color: var(--win-bg);
+  outline: var(--button-bg) 1px solid;
+  outline-offset: -1px;
+  padding: 1px;
+}
+
+#GlobalLoadIndicator > div.body div.progress-bar div.inner {
+  width: var(--value, 0%);
+  height: 6px;
+  border-radius: 3px;
+  background-color: var(--accent-light);
 }
