Bunch of bug fixes and improvements

--- a/src/css/spinner.css
+++ b/src/css/spinner.css
@@ -30,6 +30,17 @@ div.html-spinner.large {
   --thickness: 5px;
 }
 
+div.spinner-center {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 @keyframes spin {
   0% {
     transform: rotate(0deg);
