--- a/src/css/apps/user/sqeleton/bottompane.css
+++ b/src/css/apps/user/sqeleton/bottompane.css
@@ -162,7 +162,7 @@
 }
 
 #Sqeleton > div.body div.bottom-pane div.pane-content div.query-row span.query {
-  font-family: "Fira Code";
+  font-family: "Fira Mono";
   font-size: 12px;
   text-align: left;
   line-height: 16px;
