--- a/src/css/apps/components/shell/taskbar.css
+++ b/src/css/apps/components/shell/taskbar.css
@@ -146,11 +146,21 @@ div.shell div.taskbar div.pinned-apps > button {
 }
 
 #arcShell div.shell div.taskbar div.pinned-apps > button:hover {
-  background-color: var(--shell-component-bg);
+  background-color: var(--button-glass-hover-bg);
 }
 
 #arcShell div.shell div.taskbar div.pinned-apps > button:active {
   background-color: var(--button-glass-active-bg);
+}
+
+.theme-light #arcShell div.shell div.taskbar div.pinned-apps > button:hover {
+  background-color: var(--shell-component-bg);
+  filter: brightness(0.95);
+}
+
+.theme-light #arcShell div.shell div.taskbar div.pinned-apps > button:active {
+opacity: 0.5;
+  filter: brightness(0.9);
 }
 
 div.shell div.taskbar div.pinned-apps > button + button {
@@ -250,6 +260,16 @@ div.shell div.taskbar button.clock-button:hover {
 
 div.shell div.taskbar button.clock-button:active {
   background-color: var(--button-glass-active-bg);
+  opacity: 0.5;
+}
+
+.theme-light div.shell div.taskbar button.clock-button:hover {
+  background-color: var(--shell-component-bg);
+  filter: brightness(0.95);
+}
+
+.theme-light div.shell div.taskbar button.clock-button:active {
+  background-color: var(--shell-component-bg);
   opacity: 0.5;
 }
 
