--- a/src/css/apps/user/settings/slide.css
+++ b/src/css/apps/user/settings/slide.css
@@ -15,14 +15,30 @@
 
 #systemSettings div.slide-wrapper.visible {
   pointer-events: initial;
-  backdrop-filter: blur(var(--blur));
+}
+
+#systemSettings div.slide-wrapper::before {
+  content:"";
+  position:absolute;
+  left:0;
+  top:0;
+  width:100%;
+  height:100%;
   background-color: #0002;
+  pointer-events: none;
+  opacity: 0;
+  transition: opacity 0.2s;
+}
+
+
+#systemSettings div.slide-wrapper.visible::before {
+  opacity: 1;
 }
 
 #systemSettings div.slide-wrapper div.slide {
   width: 100%;
   height: 100%;
-  background-color: var(--glass-bg);
+  background-color: var(--win-bg);
   translate: 100% 0;
   transition: translate 0.3s;
   padding: 15px;
