--- a/src/css/main.css
+++ b/src/css/main.css
@@ -65,6 +65,7 @@ main#main {
   height: 100%;
   z-index: 100;
   background-color: #000;
+  transition: all 0.2s !important;
 }
 
 main#main.hidden #appRenderer {
