--- a/src/css/state/arcterm.css
+++ b/src/css/state/arcterm.css
@@ -1,10 +1,15 @@
-#arcTermMode {
+#arcTermWrapper {
   position: absolute;
   top: 0px;
   left: 0px;
-  width: calc(100% - 14px);
-  height: calc(100% - 14px);
-  margin: 7px;
+  width: 100%;
+  height: 100%;
+  padding: 7px;
+}
+
+#arcTermMode {
+  width: 100%;
+  height: 100%;
 }
 
 #arcTermMode * {
