Begin working on the ArcTermColors layout

--- a/src/css/apps/components/terminalwindow.css
+++ b/src/css/apps/components/terminalwindow.css
@@ -21,7 +21,7 @@
 }
 
 #TerminalWindow > div.body div.xterm-viewport {
-  transition: background-color 0.3s !important;
+  background-color: transparent !important;
 }
 
 #TerminalWindow > div.body .xterm-cursor.xterm-cursor-bar {
