--- a/src/css/apps/user/mediaplayer.css
+++ b/src/css/apps/user/mediaplayer.css
@@ -21,6 +21,7 @@
   width: calc(100% - 200px);
   height: 100%;
   /* padding: 20px; */
+  background-color: var(--win-bg);
 }
 
 #MediaPlayer.fullscreen {
