--- a/src/css/apps/user/mediaplayer/player.css
+++ b/src/css/apps/user/mediaplayer/player.css
@@ -70,9 +70,8 @@
 
 .theme-light #MediaPlayer div.audio-visual::before {
   opacity: 0.1;
-  filter:brightness(1.5) blur(20px)
+  filter: brightness(1.5) blur(20px);
 }
-
 
 #MediaPlayer div.audio-visual div.file {
   width: 100%;
@@ -130,6 +129,7 @@
 #MediaPlayer div.audio-visual > div.cover-art img {
   width: 100%;
   height: 100%;
+  object-fit: contain;
 }
 
 #MediaPlayer.fullscreen div.audio-visual {
