--- a/src/css/apps/admin/adminportal.css
+++ b/src/css/apps/admin/adminportal.css
@@ -14,6 +14,7 @@
 @import url("./adminportal/page/viewscopes.css");
 @import url("./adminportal/page/auditlog.css");
 @import url("./adminportal/page/logs.css");
+@import url("./adminportal/page/query.css");
 @import url("./adminportal/sidebar.css");
 @import url("./adminportal/userdata.css");
 
